--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,8 @@ p{
   padding: 2rem;
 }
 
+
+
 #movie-index{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -63,9 +65,13 @@ header {
 
 .mood-card{
   margin: 2rem;
-  border: 1px solid black;
   height: 8rem;
   width: 8rem;
+  font-size: 6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ 
 }
 
 .mood-image{
@@ -125,5 +131,5 @@ header {
 
 h4{
   font-size: 1.2rem;
-  
+
 }
