--- a/src/style.css
+++ b/src/style.css
@@ -12,15 +12,16 @@ p{
 }
 
 #mood-index {
-  /* display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr; */
+
   height: auto;
-  background-color: black;
   color: white;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 2rem;
+  margin-top: -5vh;
+  padding-bottom: 5vh;
+  border-bottom: 1px solid white;
+
 }
 
 
@@ -48,11 +49,12 @@ p{
 }
 
 header {
-  background-color: black;
+  background-color:rgba(1, 186, 3, 0);
   height: 5vh;
   display: flex;
   align-items: center;
   margin: 1rem;
+  position:fixed;
 }
 
 #header-title {
@@ -71,12 +73,9 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
- 
+
 }
 
-.mood-image{
-  width: 100%;
-}
 
 .mood-name{
   width: 100%;
@@ -131,5 +130,20 @@ header {
 
 h4{
   font-size: 1.2rem;
+
+}
+
+
+#movieBackground{
+  margin: 0;
+  padding: 0;
+
+}
+#movieBackgroundVideo{
+  width: 100%;
+  height: auto;
+
+  margin-top: -10rem;
+  margin-bottom: ;
 
 }
