--- a/src/style.css
+++ b/src/style.css
@@ -20,8 +20,16 @@ p{
   justify-content: center;
   margin-top: -5vh;
   padding-bottom: 5vh;
-  border-bottom: 1px solid white;
 
+
+}
+
+.index-movie-card{
+  flex: 0 0 7rem;
+  margin: 1.5rem;
+  display:flex;
+  flex-direction:column;
+ 
 }
 
 
@@ -42,6 +50,7 @@ p{
   color: white;
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none;
+
 }
 #movie-scroll-index::-webkit-scrollbar {
     width: 0px;
@@ -65,6 +74,15 @@ header {
   color: white;
 }
 
+#header-title:active{
+  font-size: 2.9rem;
+}
+
+#header-title:hover{
+  color: rgb(209, 209, 209);
+  cursor: pointer;
+}
+
 .mood-card{
   margin: 2rem;
   height: 8rem;
@@ -73,7 +91,19 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 2rem;
+}
 
+.mood-card-icon:active{
+  color: rgb(168, 168, 168);
+  font-size: 5rem;
+  margin-bottom: 1rem;
+  padding-top: .2rem;
+
+}
+
+.mood-card-icon:hover{
+  cursor: pointer;
 }
 
 
@@ -84,11 +114,31 @@ header {
 .movie-image {
   width: 100%;
   height: auto;
+  max-height: ;
+}
+
+.movie-image:hover{
+  
+
+}
+
+.movie-scroll-image {
+  width: 100%;
+  height: auto;
+}
+
+.movie-scroll-image:hover{
+  width: 110%;
+
 }
 
 .movie-card{
   flex: 0 0 7rem;
   margin: 1.5rem;
+  display:flex;
+  flex-direction:column;
+  justify-content: space-between;
+  
 }
 
 .movie-title{
