--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ p{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: -5vh;
+  margin-top:;
   padding-bottom: 5vh;
 
 
@@ -65,6 +65,7 @@ header {
   align-items: center;
   padding: 1rem;
   position:fixed;
+  z-index: 3;
 }
 
 #header-title {
@@ -188,13 +189,33 @@ h4{
 #movieBackground{
   margin: 0;
   padding: 0;
+  display: grid;
+  grid-area: main;
 
 }
 #movieBackgroundVideo{
   width: 100%;
   height: auto;
-
   margin-top: -10rem;
-  margin-bottom: ;
+  display: flex;
+  z-index: 1;
 
+
+}
+
+#video-overlay{
+  z-index: 2;
+  height: 40vw;
+  width: 100%;
+  background-color: rgba(228, 192, 129, 0);
+  position:absolute;
+  display: flex;
+  font-size: 4rem;
+  color: white;
+  align-items: flex-end;
+  justify-content: right;
+}
+
+#video-overlay i{
+  margin: 1rem;
 }
