--- a/src/style.css
+++ b/src/style.css
@@ -91,7 +91,7 @@ header {
   margin: 2rem;
   height: 8rem;
   width: 8rem;
-  font-size: 6rem;
+  font-size: 3.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -122,7 +122,7 @@ header {
 }
 
 .movie-image:hover{
-
+  cursor:pointer;
 
 }
 
@@ -208,7 +208,7 @@ h4{
 
 #video-overlay{
   z-index: 2;
-  height: 40vw;
+  height: 35vw;
   width: 100%;
   background-color: rgba(228, 192, 129, 0);
   position:absolute;
