--- a/src/style.css
+++ b/src/style.css
@@ -219,12 +219,10 @@ h4{
   background-color: rgba(228, 192, 129, 0);
   position:absolute;
   display: flex;
-  font-size: 4rem;
-  color: white;
+  font-size: 3rem;
+  color: rgba(255, 255, 255, 0.2);
   align-items: flex-end;
   justify-content: flex-end;
-
-
 }
 
 
